--- a/movieVerse-backend/docker-compose.yml
+++ b/movieVerse-backend/docker-compose.yml
@@ -15,6 +15,13 @@ services:
       - movieVerse-net
     restart: unless-stopped
 
+  mail-dev:
+    container_name: maildev_movieVerse
+    image: maildev/maildev
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+
 networks:
   movieVerse-net:
     driver: bridge
