--- a/movieVerse-backend/.gitignore
+++ b/movieVerse-backend/.gitignore
@@ -3,9 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/application.properties
-src/main/resources/private_key.pem
-src/main/resources/public_key.pem
+src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
