--- a/movieVerse-backend/docker-compose.yml
+++ b/movieVerse-backend/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    container_name: mysql_movieVerse
+    container_name: mysql_movieVerse_container
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: password
@@ -16,31 +16,11 @@ services:
     restart: unless-stopped
 
   mail-dev:
-    container_name: maildev_movieVerse
+    container_name: maildev_movieVerse_container
     image: maildev/maildev
     ports:
       - "1080:1080"
       - "1025:1025"
-
-  #movieverse-backend-project:
-  #  container_name: movieverse-backend-project
-  #  image: movieverse-backend-project
-  #  ports:
-  #    - 8888:8888
-  #  networks:
-  #    - movieVerse-net
-  #  depends_on:
-  #    - mysql
-
-  #movieverse-frontend-project:
-  #  container_name: movieverse-frontend-project
-  #  image: movieverse-frontend-project
-  #  ports:
-  #    - 5000:80
-  #  networks:
-  #    - movieVerse-net
-  #  depends_on:
-  #    - movieverse-backend-project*/
 
 networks:
   movieVerse-net:
