--- a/movieVerse-frontend/nginx.conf
+++ b/movieVerse-frontend/nginx.conf
@@ -7,18 +7,12 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html;
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location ~ \.(js|css)$ {
             root /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-
-        location ~ \.(?:ico|jpg|jpeg|png|gif|webp|svg|eot|ttf|woff|woff2|otf)$ {
-            root /usr/share/nginx/html;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         location ~ ^/.+$ {
